fix wrap and for loop for the creation of cards
it did break the img function however

--- a/Style.css
+++ b/Style.css
@@ -144,3 +144,8 @@ h1 {
     max-height: 12.25em;
     max-width: 12.75em;
   }
+
+  .BeerCardContainer {
+    display: flex;
+    flex-wrap: wrap;
+  }
